Toast message added

--- a/views/includes/_form.ejs
+++ b/views/includes/_form.ejs
@@ -1,56 +1,77 @@
-<form method="POST" id="add_user" action="/api/users">
-    <div class="form-row">
-        <div class="form-group col-md-4">
-            <label for="inputName">Name</label>
-            <input type="text" class="form-control" name="name" value="" id="inputName" placeholder="Krish" required>
-          </div>
-        <div class="form-group col-md-4">
-          <label for="inputEmail">Email</label>
-          <input type="email" class="form-control" name="email" value="" id="inputEmail" placeholder="test@gmail.com" required>
+<form method="POST" id="add_user" action="/add-user">
+  <div class="form-row">
+      <div class="form-group col-md-4">
+          <label for="inputName">Name</label>
+          <% if(pageErrors==0){%>
+            <script>toastr.success("Data Inserted Successfully!!!");</script>
+            <% } %>  
+          <% if(pageErrors==1){ %>
+          <script>toastr.error("Email is already exists!!");</script>
+          <input type="text" class="form-control" name="name" value="<%= users.name %>" id="inputName" placeholder="Krish" required>
+          <% }else{ %>
+          <input type="text" class="form-control" name="name" value="" id="inputName" placeholder="Krish" required>
+          <% } %>
         </div>
+      <div class="form-group col-md-4">
+        <label for="inputEmail">Email</label>
+        <% if(pageErrors==1){ %>
+        <input type="email" class="form-control" name="email" value="<%= users.email %>" id="inputEmail" placeholder="test@gmail.com" required>
+        <% }else{ %>
+        <input type="email" class="form-control" name="email" value="" id="inputEmail" placeholder="test@gmail.com" required>
+        <% } %>
       </div>
-      <fieldset class="form-group">
-        <div class="row">
-          <legend class="col-form-label col-sm-1 pt-0">Gender</legend>
-          <div class="col-sm-10">
-            <div class="form-check">
+    </div>
+    <fieldset class="form-group">
+      <div class="row">
+        <legend class="col-form-label col-sm-1 pt-0">Gender</legend>
+        <div class="col-sm-10">
+          <div class="form-check">
+            <% if(pageErrors==1){ %>
+            <input class="form-check-input" type="radio" name="gender" id="gridRadios1" value="Male" <%= users.gender == 'Male' ? 'checked' : '' %>>
+            <% }else{ %>
               <input class="form-check-input" type="radio" name="gender" id="gridRadios1" value="Male" checked>
-              <label class="form-check-label" for="gridRadios1">
-                Male
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="Female">
-              <label class="form-check-label" for="gridRadios2">
-                Female
-              </label>
-            </div>
-            <div class="form-check disabled">
-              <input class="form-check-input" type="radio" name="gender" id="gridRadios3" value="Other">
-              <label class="form-check-label" for="gridRadios3">
-                Other
-              </label>
-            </div>
+            <% } %>
+            <label class="form-check-label" for="gridRadios1">
+              Male
+            </label>
+          </div>
+          <div class="form-check">
+            <% if(pageErrors==1){ %>
+            <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="Female" <%= users.gender == 'Female' ? 'checked' : '' %>>
+            <% }else{ %>
+            <input class="form-check-input" type="radio" name="gender" id="gridRadios2" value="Female">
+            <% } %>
+            <label class="form-check-label" for="gridRadios2">
+              Female
+            </label>
+          </div>
+          <div class="form-check disabled">
+            <% if(pageErrors==1){ %>
+            <input class="form-check-input" type="radio" name="gender" id="gridRadios3" value="Other" <%= users.gender == 'Other' ? 'checked' : '' %>>
+            <% }else{ %>
+            <input class="form-check-input" type="radio" name="gender" id="gridRadios3" value="Other">
+            <% } %>
+            <label class="form-check-label" for="gridRadios3">
+              Other
+            </label>
           </div>
         </div>
-      </fieldset>
-      <!-- <div class="form-group">
-        <label for="inputAddress2">Address 2</label>
-        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-      </div> -->
-      <div class="form-row">
-        <!-- <div class="form-group col-md-6">
-          <label for="inputCity">City</label>
-          <input type="text" class="form-control" id="inputCity">
-        </div> -->
-        <div class="form-group col-md-2">
-          <label for="inputState">State</label>
-          <select id="inputState" class="form-control" name="status">
-            <option selected>Active</option>
-            <option>InActive</option>
-          </select>
-        </div>
       </div>
-      
-      <button type="submit" class="btn btn-primary">Submit</button>
+    </fieldset>
+    <div class="form-row">
+      <div class="form-group col-md-2">
+        <label for="inputState">State</label>
+        <select id="inputState" class="form-control" name="status">
+          <% if(pageErrors==1){ %>
+          <option <%= users.status == 'Active' ? 'selected' : '' %>>Active</option>
+          <option <%= users.status == 'InActive' ? 'selected' : '' %>>InActive</option>
+          <% }else{ %>
+          <option selected>Active</option>
+          <option>InActive</option>
+          <% } %>
+          
+        </select>
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
